--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <div id="controls">
         <button id="button1">Go to store</button>
         <button id="button2">Go to cave</button>
+        <button id="button4">Go to the Forest</button>
+        <button id="button5">Go to the Castle</button>
         <button id="button3">Fight dragon</button>
       </div>
       <div id="monsterStats">
