--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
       <div id="controls">
         <button id="button1">Go to store</button>
         <button id="button2">Go to cave</button>
+        <button id="button3">Fight dragon</button>
         <button id="button4">Go to the Forest</button>
         <button id="button5">Go to the Castle</button>
-        <button id="button3">Fight dragon</button>
+       
       </div>
       <div id="monsterStats">
         <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
         <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
       </div>
       <div id="text">
-        Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.
+        Welcome to the Kingdom of Luzteria. Increase your legend by fighting great Beasts and collect rad treasure!!!
       </div>
     </div>
     <script src="./script.js"></script>
